# sgx-quote-sample

./: .enclavehub.yml  Dockerfile  Makefile.am  README.md  bootstrap  client.cpp  configure.ac  docker-compose.yml  enclave.nix  nix.yml  run.in
.enclavehub/: enclave_sigstruct_raw
Enclave/: Enclave.cpp  Enclave.edl  Makefile.am
